--- a/table.html
+++ b/table.html
@@ -1,5 +1,5 @@
 
-<table class="table table--responsive table--theme-dark table--borders">
+<table class="table table--responsive table--theme-dark table--borders u--margin-bottom-2">
     <caption class="u--sr-only">Admissions Events</caption>
     <thead>
         <tr>
